Fixing ui layout bugs an zindex problems, also fixed the issue that most widgets not work fully when in grid layout

--- a/www/frameworks/popup/modalLightboxPopup.css
+++ b/www/frameworks/popup/modalLightboxPopup.css
@@ -6,7 +6,7 @@ html:has(#editor-window) {
 
 #editor-overlay {
     position: fixed;
-    z-index: 99999999999999999999999;
+    z-index: 9999;
     inset: 0px;
     display: flex;
     justify-content: center;
